# src/modules/auth/schemas/refresh.schema.ts
@@ -1,7 +1,16 @@
 import z from "zod";
 
+export const RefreshSchema = z.object({
+  refreshToken: z.jwt(),
+});
+
+export const RefreshBodySchema = z.object({
+  body: RefreshSchema,
+});
+
 export const RefreshResponseSchema = z.object({
   data: z.object({
     accessToken: z.jwt(),
+    refreshToken: z.jwt(),
   }),
 });
